--- a/index/templates/login_signup.html
+++ b/index/templates/login_signup.html
@@ -20,9 +20,6 @@
         <a class="btn btn-dope active" id="pills-login-tab" data-toggle="pill" href="#pills-login" role="tab" aria-controls="pills-login" aria-selected="true">
           Log In
         </a>
-        <span>
-          or
-        </span>
         <a class="btn btn-dope" id="pills-signup-tab" data-toggle="pill" href="#pills-signup" role="tab" aria-controls="pills-signup" aria-selected="false">
           Sign Up
         </a>
@@ -53,7 +50,7 @@
                   <input class="form-control login-field" type="password" name="password" placeholder="Password" required="" id="login-password">
                 </div>
                 <div class="col-auto">
-                  <button type="submit" class="btn btn-dope login-button">Log In</button>
+                  <button type="submit" class="btn btn-dope active login-button">Log In</button>
                 </div>
               </div>
               <div class="form-row">
@@ -88,7 +85,7 @@
                   <input class="form-control login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
                 </div>
                 <div class="col-auto">
-                  <button type="submit" class="btn btn-dope signup-button">Sign Up</button>
+                  <button type="submit" class="btn btn-dope active signup-button">Sign Up</button>
                 </div>
               </div>
             </form>
@@ -122,7 +119,7 @@
                   <input class="form-control login-field" type="password" name="password" placeholder="Password" required="" id="login-password">
                 </div>
                 <div class="col-auto">
-                  <button type="submit" class="btn btn-dope login-button">Log In</button>
+                  <button type="submit" class="btn btn-dope active login-button">Log In</button>
                 </div>
               </div>
               <div class="form-row">
@@ -157,7 +154,7 @@
                   <input class="form-control login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
                 </div>
                 <div class="col-auto">
-                  <button type="submit" class="btn btn-dope signup-button">Sign Up</button>
+                  <button type="submit" class="btn btn-dope active signup-button">Sign Up</button>
                 </div>
               </div>
             </form>
@@ -185,11 +182,11 @@
       </div>
     </div>
     <div id="social-login">
-      <a class="btn socialaccount_provider google social-link" href="/account/google/login/?process=login" title="Google">
-        <i class="fa fa-google float-left"></i> Sign in with Google
+      <a class="btn btn-dope socialaccount_provider google social-link" href="/account/google/login/?process=login" title="Google">
+        <i class="fab fa-google"></i> Sign in with Google
       </a>
-      <a class="btn socialaccount_provider google social-link" href="/account/facebook/login/?process=login" title="Facebook">
-        <i class="fa fab-facebook float-left"></i> Sign in with Facebook
+      <a class="btn btn-dope socialaccount_provider google social-link" href="/account/facebook/login/?process=login" title="Facebook">
+        <i class="fab fa-facebook"></i> Sign in with Facebook
       </a>
       <!-- <a title="Reddit" class="socialaccount_provider reddit" href="/account/reddit/login/?process=login">
       <i class="fab fa-reddit"></i>
