--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -87,11 +87,11 @@
       </button>
     </form>
     {% endif %}
-    <button class="btn btn-dope" type="button" data-toggle="collapse" data-target="#episode-collapse" aria-expanded="false" aria-controls="episode-collapse">
+    <a class="btn btn-dope toggle" id="show-episodes" href="#">
       <span>
         Episodes
       </span>
-    </button>
+    </a>
     <button class="btn btn-dope btn-dope-disabled">
       <span>
         Reviews
