--- a/index/templates/index/results_detail.html
+++ b/index/templates/index/results_detail.html
@@ -5,23 +5,25 @@ dopepod
 {% endblock %}
 
 {% block results_x %}
-{% if podcasts %}
-  {% for podcast in podcasts %}
-    <a class="col-lg-2 col-md-3 col-4 result-box show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
-      <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}200x200bb.jpg&w=200&h=200&t=absolute" />
-      <h6 class="result-title">
-        {{ podcast.title }}
-      </h6>
-      <p class="result-artist">
-        by {{ podcast.artist }}
+<div class="row" id="result-detail">
+  {% if podcasts %}
+    {% for podcast in podcasts %}
+      <a class="col-lg-2 col-md-3 col-4 result-box show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
+        <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}200x200bb.jpg&w=200&h=200&t=absolute" />
+        <h6 class="result-title">
+          {{ podcast.title }}
+        </h6>
+        <p class="result-artist">
+          by {{ podcast.artist }}
+        </p>
+      </a>
+    {% endfor %}
+  {% else %}
+    <div class="col">
+      <p>
+        No results
       </p>
-    </a>
-  {% endfor %}
-{% else %}
-  <div class="col">
-    <p>
-      No results
-    </p>
-  </div>
-{% endif %}
+    </div>
+  {% endif %}
+</div>
 {% endblock %}
