--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -1,31 +1,34 @@
 {% if episodes %}
-<div class="col">
-    <div class="row results-bar">
-      <div class="col results-header">
-        {{ episodes_header }}
-      </div>
-      <div class="col-auto results-options">
-        <ul>
-          <li>
-            <a class="btn btn-dope btn-dope-tab results-minimize" aria-label="Minimize">
-              <i class="fas fa-minus-circle"></i>
-            </a>
-          </li>
-          <li>
-            <a class="btn btn-dope btn-dope-tab results-close" aria-label="Close">
-              <i class="fas fa-times-circle"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
+<div class="col results">
+  <div class="row results-bar">
+    <div class="col results-header">
+      {{ episodes_header }}
     </div>
-    <div class="row options-select color-1">
-      <div class="options-group" id="chart-genre-buttons" data-toggle="buttons">
-      </div>
+    <div class="col-auto results-options">
+      <ul>
+        <li>
+          <a class="btn btn-dope btn-dope-tab toggle results-minimize" data-toggle="collapse" href="#episode-collapse" aria-expanded="true" aria-controls="episode-collapse" aria-label="Minimize">
+            <!-- <i class="fas fa-plus-circle"></i> -->
+            <i class="fas fa-minus-circle"></i>
+          </a>
+        </li>
+        <li>
+          <a class="btn btn-dope btn-dope-tab results-close" href="#" aria-label="Close">
+            <i class="fas fa-times-circle"></i>
+          </a>
+        </li>
+      </ul>
     </div>
-    <div class="row results-wrapper">
-      <div class="col">
-        <table class="table" id="episodes-table">
+  </div>
+  <div class="row options-select color-1">
+    <div class="col-auto ml-auto" id="episodes-selected-buttons" data-toggle="buttons">
+      <ul class="options-field">
+      </ul>
+    </div>
+  </div>
+  <div class="row collapse show results-wrapper" id="episode-collapse">
+    <div class="col">
+      <table class="table" id="episodes-table">
           <thead>
             <tr>
               <th>
@@ -43,8 +46,8 @@
             </tr>
           </thead>
           <tbody>
-          {% for episode in episodes %}
-            <tr class="hover" data-toggle="collapse" data-target="#more-collapse{{ forloop.counter }}">
+            {% for episode in episodes %}
+            <tr class="hover toggle" data-toggle="collapse" data-target="#more-collapse{{ forloop.counter }}">
               <th scope="row">{{ forloop.counter }}</th>
               <td>
                 {{ episode.title }}
@@ -54,9 +57,9 @@
               </td>
               <td>
                 {% if episode.length %}
-                  {{ episode.length }}
+                {{ episode.length }}
                 {% else %}
-                  N/A
+                N/A
                 {% endif %}
               </td>
             </tr>
@@ -87,10 +90,10 @@
                 </div>
               </td>
             </tr>
-          {% endfor %}
-        </tbody>
-      </table>
+            {% endfor %}
+          </tbody>
+        </table>
     </div>
   </div>
-  </div>
+</div>
 {% endif %}
