--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -20,10 +20,10 @@
         </audio>
       </div>
       <div id="player-buttons">
-        <a id="player-minimize" aria-label="Minimize">
+        <a id="player-minimize" href="#" aria-label="Minimize">
           <i class="fas fa-minus-circle"></i>
         </a>
-        <a id="player-close" aria-label="Close">
+        <a id="player-close" href="#" aria-label="Close">
           <i class="fas fa-times-circle"></i>
         </a>
       </div>
