--- a/index/templates/login_signup.html
+++ b/index/templates/login_signup.html
@@ -171,7 +171,7 @@
                   <input class="form-control login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required="">
                 </div>
                 <div class="col-auto">
-                  <button class="btn btn-dope password-button" type="submit">
+                  <button class="btn btn-dope active password-button" type="submit">
                     Reset
                   </button>
                 </div>
