--- a/index/static/style.css
+++ b/index/static/style.css
@@ -263,8 +263,7 @@ body {
   min-height: 100vh;
 }
 .results {
-  margin-left: -1px;
-  margin-right: -1px;
+
 }
 
 /* TOGGLE BUTTONS */
@@ -588,9 +587,7 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   overflow: hidden;
-  border-left: 1px solid #ddd;
   border-bottom: 4px solid rgba(0, 204, 122, 1);
-  border-right: 1px solid #ddd;
   -webkit-box-shadow: inset rgba(0,0,0,.3) 0 -1px 2px;
   -moz-box-shadow: inset rgba(0,0,0,.3) 0 -1px 2px;
   box-shadow: inset rgba(0,0,0,.3) 0 -1px 2px ;
@@ -647,8 +644,7 @@ body {
   transition: background .25s ease-in-out;
   -moz-transition: background .25s ease-in-out;
   -webkit-transition: background .25s ease-in-out;
-  padding-left: 4px;
-  padding-right: 4px;
+  padding: 4px;
 }
 .result-box img:hover {
   -webkit-box-shadow: rgba(0,0,0,.3) 0 0 8px;
