--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -7,8 +7,7 @@
     <div class="col-auto results-options">
       <ul>
         <li>
-          <a class="btn btn-dope btn-dope-tab toggle results-minimize" data-toggle="collapse" href="#episode-collapse" aria-expanded="true" aria-controls="episode-collapse" aria-label="Minimize">
-            <!-- <i class="fas fa-plus-circle"></i> -->
+          <a class="btn btn-dope btn-dope-tab reverse-toggle results-minimize" data-toggle="collapse" href="#episode-collapse" aria-expanded="true" aria-controls="episode-collapse" aria-label="Minimize">
             <i class="fas fa-minus-circle"></i>
           </a>
         </li>
