--- a/index/templates/index/subscriptions.html
+++ b/index/templates/index/subscriptions.html
@@ -5,7 +5,7 @@ dopepod
 {% endblock %}
 
 {% block results_x %}
-<div class="row">
+<div class="row results-content">
   <div class="col">
     {% for subscription in subscriptions %}
       <div class="row">
